--- a/config.py.example
+++ b/config.py.example
@@ -26,7 +26,7 @@ Redis = os.environ['RedisUrl']
 
 # 微信 Server酱 push，获取 Token 参考：http://sc.ftqq.com/3.version
 # 不启用修改为 None
-WeixinToken = os.environ['SCT137875TbIlsYG9KBZ9hlgb02Z1FgvDJ']
+WeixinToken = os.environ[SCT137875TbIlsYG9KBZ9hlgb02Z1FgvDJ]
 
 # 关注的城市，所有设置为 None
 # 其他设置为字符串即可，使用空格分割多个城市，比如
